NXP-32866: Use new audit APIs in Drive